--- a/Minggu5/tugas time.HTML
+++ b/Minggu5/tugas time.HTML
@@ -21,13 +21,12 @@
         <summary>silahkan pilih nada dering alarm</summary>
         <p>Nada 1</p>
    <p> <audio controls>
-        <source src="whistle bird.mp3" type="audio/ogg">
-        <source src="whistle bird.mp3" type="audio/mpeg">
+        <source src="mixkit-classic-short-alarm-993.wav" type="audio/wav">
       </audio></p>
       <p> Nada 2</p>
       <body>
         <audio controls loop>
-          <source src="water fall.mp3">
+          <source src="mixkit-scanning-sci-fi-alarm-905.wav" type="audio/wav">
         </audio>  
       </body>
     </body>
